# the-crew

./: .env.example  .gitignore  README.md  crew.yaml  pyproject.toml  restart.sh  run.sh
deploy/slack/: README.md  _template.yaml  adam.yaml  eva.yaml  generate.py  sara.yaml  zakarya.yaml
docs/superpowers/plans/: 2026-06-19-crew-phase1.md
docs/superpowers/specs/: 2026-06-19-ai-crew-slack-team-design.md
personas/_template/: expertise.md  personality.md
personas/_template/memory/: MEMORY.md
personas/adam/: expertise.md  personality.md
personas/adam/memory/: MEMORY.md
personas/eva/: expertise.md  personality.md
personas/eva/memory/: MEMORY.md
personas/sara/: expertise.md  personality.md
personas/sara/memory/: MEMORY.md
personas/zakarya/: expertise.md  personality.md
personas/zakarya/memory/: MEMORY.md
src/crew/: __main__.py  agent_session.py  audit.py  config.py  feedback.py  guardrails.py  memory.py  model_router.py  persona.py  router.py  service.py  slack_app.py  state.py  webhook.py
src/crew.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_agent_session.py  test_audit.py  test_config.py  test_feedback.py  test_guardrails.py  test_memory.py  test_model_router.py  test_persona.py  test_router.py  test_service.py  test_slack_app.py  test_state.py  test_webhook.py
