[project]
name = "crew"
version = "0.1.0"
description = "The Crew — a team of AI coworkers (Adam, Eva, Zakarya, Sara) operated over Slack via the Claude Agent SDK."
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "slack-bolt>=1.18.0",
    "aiohttp>=3.9.0",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
